<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F6F8"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDonateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/FMDonoTXT1"
            android:textColor="#222"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDonateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/FMDonoTXT2"
            android:textColor="#555"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateOxa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMOxaPayDonoBTNTXT"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateCoin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMCoinDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateBTC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMBTCDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateETH"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMETHDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateUSDT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMUSDTDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateUSDC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMUSDCDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateSHIB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMSHIBDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateDOGE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMDogeDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateTRON"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMTRXDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateLTC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMLTCDonoBTNTXT"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateBNB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMBNBDonoBTNTXT"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonateSOL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMSOLDonoBTNTXT"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDonatePEPE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/FMPEPEDonoBTNTXT"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/BackToFM"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>