<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GW_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backbtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:src="@drawable/back_btn"
                android:text="@string/backTXTANDbackBTNTXT" />

            <ImageView
                android:id="@+id/CatLogo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/cat_logo" />

            <TextView
                android:id="@+id/CatText"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/catClickerTXT" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/CatVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catClickerVersionTXT" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/CatDbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catClickerDownBTNTXT" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/CatDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catClickerDescTXT" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/CatDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FMDevTXT" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/CatPerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickerPermTXT" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/CatSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catClickerSCBTNTXT" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/MAOFM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MAOFMBTNTXT" />
    </LinearLayout>
</ScrollView>