<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/backTXTANDbackBTNTXT" />

            <ImageView
                android:id="@+id/ghlogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gh_logo"
                android:layout_marginLeft="5dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/GHNameTXT"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:paddingTop="16dp"
            android:text="@string/GHFirstDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/GHSecondDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/GHThirdDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/GHFourthDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/GHFifthDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/GHSixthDesc"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/srccdbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GHFASSCBTNTXT" />
    </LinearLayout>
</ScrollView>
