<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GW_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backbtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:src="@drawable/back_btn"
                android:text="@string/backTXTANDbackBTNTXT" />

            <ImageView
                android:id="@+id/PLC2Logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/plc_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/PLC2Text"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/plcNameTXT" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="16dp"
            android:id="@+id/PLC2Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="16dp"
            android:id="@+id/PLC2Dbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Download PLC" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="16dp"
            android:id="@+id/PLC2Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLC is a Made With Unity Game where you click on Several Programming Languages in order to get them. PLC is my 1st Clicker Game I made and in total my 2nd Game I made." />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="16dp"
            android:id="@+id/PLC2Dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FMDevTXT" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="16dp"
            android:id="@+id/PLC2Perms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickerPermTXT" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="16dp"
            android:id="@+id/MAOFM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MAOFMBTNTXT" />
    </LinearLayout>
</ScrollView>